tests/golden/expected/image_missing.stdout.txt
Compile error: tests/fixtures/image_missing.lamp:12: type error: image "ghost_art": file not found: art/nope.png
  12 | image ghost_art: file "art/nope.png"
    | ^
